Initial commit - changed titles on some lightning-cards

--- a/Account Details Card/force-app/main/default/lwc/accountDetailsCardApex/accountDetailsCardApex.html
+++ b/Account Details Card/force-app/main/default/lwc/accountDetailsCardApex/accountDetailsCardApex.html
@@ -1,6 +1,6 @@
 <template>
     <lightning-card
-        title="Account Details">
+        title="Account Details - Apex method">
 
         <template if:true={account}>
             <lightning-record-form
