--- a/Account Details Card/force-app/main/default/lwc/accountDetailsCardLWC/accountDetailsCardLWC.html
+++ b/Account Details Card/force-app/main/default/lwc/accountDetailsCardLWC/accountDetailsCardLWC.html
@@ -1,6 +1,6 @@
 <template>
     <lightning-card
-        title="Account Details"
+        title="Account Details - JS method"
         icon-name="standard:contact">
 
         <div class="slds-var-m-around_medium">
