--- a/Account Details Card/force-app/main/default/lwc/accountDetailsCardApex/accountDetailsCardApex.html
+++ b/Account Details Card/force-app/main/default/lwc/accountDetailsCardApex/accountDetailsCardApex.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-card
         title="Account Details - Apex method"
-        icon-name="custom:63">
+        icon-name="custom:custom63">
 
         <template if:true={account}>
             <lightning-record-form
