changed to remove the sort function

--- a/Account Record Page Datatables/force-app/main/default/lwc/contactsTable/contactsTable.html
+++ b/Account Record Page Datatables/force-app/main/default/lwc/contactsTable/contactsTable.html
@@ -27,11 +27,7 @@
                     column-widths-mode="auto"
                     show-row-number-column
                     hide-checkbox-column
-                    onrowaction={handleRowAction}
-                    default-sort-direction={defaultSortDirection}
-                    sorted-direction={sortDirection}
-                    sorted-by={sortedBy}
-                    onsort={onHandleSort}>
+                    onrowaction={handleRowAction}>
                 </lightning-datatable>
 
                 <template if:true={noRecordsReturned}>
